<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WC-Car-UI</string>
    <string name="action_settings">Settings</string>
    <string name="description">ToDo: Write description.</string>
    <string name="start">ToDo: Implement "start".</string>
    <string name="credits">Credits</string>
    <string name="creditsCancel">Cancel</string>
    <string name="contentCredits">
        Das Projekt WC-Car wurde von\n
        &#8226; Lederer Maria Lisa\n
        &#8226; Poschacher Michael\n
		&#8226; Slamanig Sebastian\n
		im Rahmen des Studiums an der Fachhochschule Puch Urstein (Salzburg) 
		im Bereichs "Multimedia Technology - Web and Communities" erstellt.\n\n
		Betreuer:\n
		&#8226; DI Brigitte Jellinek (Fachsbereichsleiterin \tMMT - Web and Communities)\n
		&#8226; Michael Cramer (Mobile Applications)\n
		&#8226; Achim Stremplat (Mobile Applications)\n
    </string>
    <string name="startConnection">Start Connection</string>
    <string name="stopConnection">Stop Connection</string>
    <string name="audioStatus">Audio Status: Unknown.</string>
    <string name="contentDescriptionImageViewAudioStatus">Image for visual feedback on un/plugged audio.</string>

</resources>